clusters/on-prem/apps/semaphore/semaphore-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app: semaphore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
      - name: semaphore
        image: ghcr.io/binary-braids/ansible-semaphore:3ef71da7ad70ca385c07348eb984799adb8502fa@sha256:72feaeb735bffbe0f037d04b2d30f2bfd0e718b0852a7c9537dfd726889e2cd3
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
          - name: kerberos
            mountPath: /etc/krb5.conf
            subPath: krb5.conf
      volumes:
        - name: kerberos
          configMap:
            name: semaphore-kerberos-configmap
