clusters/on-prem/apps/semaphore/semaphore-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore-service
  namespace: semaphore
spec:
  selector:
    app: semaphore
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
