clusters/on-prem/apps/semaphore/semaphore-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore-ingress
  namespace: semaphore
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - semaphore.binarybraids.com
  rules:
  - host: semaphore.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: semaphore-service
            port: 
              number: 3000
